Fix the red 'was' label wraping issue on client appointment screen.

--- a/mobile/client/src/app/appointment-page/appointment-page.component.scss
+++ b/mobile/client/src/app/appointment-page/appointment-page.component.scss
@@ -82,7 +82,6 @@
   .AppointmentPage-cardAppTip {
     margin-top: pxtovw(8px);
     color: color($grayscale, 500);
-    text-align: right;
   }
 
   .AppointmentPage-actions {
